Redmine/posstgresql.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: task-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres-app
    spec:
      containers:
      - image: postgres:10.13
        name: postgres-pod
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
          limits:          
            cpu: 10m
            memory: 50Mi
        volumeMounts: 
        - name: databases
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: databases
        persistentVolumeClaim:
          claimName: databases
