Redmine/redmine.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redmine
  namespace: task-5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redmine-app
    spec:
      containers:
      - image: redmine:4.1.1
        name: redmine-pod
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 50Mi
          limits:          
            cpu: 10m
            memory: 50Mi
