Redmine/service_pgsql.yml
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: task-5
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    app: postgres-app
  type: ClusterIP
