Redmine/service_redmine.yml
---
apiVersion: v1 
kind: Service
metadata:
  name: redmine-service
  namespace: task-5
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: redmine-app
  type: ClusterIP
